Fix: Logo not centered

--- a/css/main.css
+++ b/css/main.css
@@ -253,6 +253,10 @@ a:hover {
   padding-top: 25px;
 }
 
+#main-logo > img {
+  width: 100%;
+}
+
 #main-arrow {
   font-size: 20px;
   margin-bottom: 10px;
